# ease

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  BACKEND_CONFIGURATION_REFERENCE.md  GPU_REQUIREMENTS.md  QUICKSTART.md  TROUBLESHOOTING.md
frontend/: Dockerfile  index.html  (+4 more)
server/: .env.example  Dockerfile  pyproject.toml
server/_archived/: identity_pipeline.py  latent_blending.py
server/scripts/: diagnostic.py
server/src/: __init__.py  config.py  main.py
server/src/generation/: __init__.py  audio_reactive_pipeline.py  base.py  controlnet_stack.py  frame_encoder.py  ip_adapter.py  keyframe_interpolator.py  pipeline.py  pose_warping.py  procedural_pose.py  stream_diffusion.py  tensorrt_compiler.py
server/src/generation/backends/: __init__.py  audio_reactive_backend.py  flux_klein_backend.py  stream_diffusion_backend.py
server/src/lyrics/: README.md  __init__.py  buffer.py  detector.py  factory.py  fingerprinter.py  hybrid_pipeline.py  import_lrc.py  keywords.py  lyric_database.py  provider.py  vocal_separator.py
server/src/lyrics/providers/: __init__.py  hybrid_provider.py  whisper_provider.py
server/src/mapping/: __init__.py  audio_mapper.py  color_organ_modulator.py  parameter_curves.py  prompt_modulator.py
server/src/presets/: __init__.py  defaults.py  types.py
server/src/server/: __init__.py  protocol.py  websocket_handler.py
server/src/story/: __init__.py  controller.py  presets.py  schema.py
server/tests/: test_controlnet_isolation.py  test_flux_klein_backend.py  test_keyframe_rife.py  test_procedural_routing.py  test_story_controller.py  test_warping.py
(+78 files in other folders)
